Fix layout shift

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,9 @@
     padding: auto;
     box-sizing: border-box;
 }
+html {
+    scrollbar-gutter: stable;
+}
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
